fixed btn z-index

--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -574,6 +574,7 @@ input ,textarea {
     padding: size(7) size(20) size(5);
     position: relative;
     transition: color 400ms;
+    z-index: 5;
     &::before {
         content: '';
         position: absolute;
